--- a/scripts/config.example.json
+++ b/scripts/config.example.json
@@ -5,7 +5,7 @@
     },
 
     "endpoints": {
-        "wax": "https://testnet.waxsweden.org",
+        "wax": ["https://testnet.waxsweden.org", "https://testnet.wax.pink.gg", "https://api.waxtest.alohaeos.com", "https://waxtest.eosn.io", "https://testnet.wax.eosrio.io", "https://wax-testnet.eoscafeblock.com", "https://api.waxtest.greeneosiobp.com", "https://wax-testnet.eosphere.io", "https://wax-testnet.maltablock.org"],
         "atomicassets": "https://test.wax.api.atomicassets.io"
     },
 
